# tableware-recognition

./: .gitignore  CMakeLists.txt
src/: classifier.cpp  classifier.h  feature_extraction.cpp  feature_extraction.h  main.cpp  processing.cpp  processing.h  segmentation.cpp  segmentation.h  test.cpp  util.cpp  util.h
